--- a/Sudoku/Sudoku.entitlements
+++ b/Sudoku/Sudoku.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.cykul.Sudoku</string>
+		<string>group.com.cykul.SudokuNew</string>
 	</array>
 </dict>
 </plist>
